added signup-signin feature

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="signup-signin.html" target="_blank">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -134,9 +134,6 @@
     </section>
 
     <!-- Footer Section -->
-    <!-- <footer class="foo">
-      <p>&copy; 2024 Your E-commerce Store. All rights reserved.</p>
-    </footer> -->
     <footer class="footer">
       <p>&copy; 2024 Your E-commerce Store. All rights reserved.</p>
     </footer>
