Javascript to render cards, used bootstrap, animation keyframes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="Product.html" target="_blank">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="signup-signin.html" target="_blank">Login</a></li>
@@ -32,7 +32,15 @@
       <div class="container">
         <h2>Welcome to Our Online Store</h2>
         <p>Discover the best products at unbeatable prices</p>
-        <button class="cta-button">Shop Now</button>
+        <button class="cta-button">
+          <a
+            href="Product.html"
+            target="_blank"
+            style="text-decoration: none; color: white"
+            >Shop Now</a
+          >
+        </button>
+        <p class="offer-text">Special Offer! Get 20% off on all electronics</p>
       </div>
     </section>
 
@@ -106,6 +114,56 @@
             <p>$79.99</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Product Features Comparison Section -->
+    <section class="product-features">
+      <div class="container">
+        <h2>Product Features Comparison</h2>
+        <table class="comparison-table">
+          <thead>
+            <tr>
+              <th rowspan="2">Product</th>
+              <th rowspan="2">Price</th>
+              <th rowspan="2">Features</th>
+              <th colspan="2">Details</th>
+            </tr>
+            <tr>
+              <th>Size</th>
+              <th>Weight</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Product 1</td>
+              <td>$49.99</td>
+              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+              <td>Large</td>
+              <td>1.5 kg</td>
+            </tr>
+            <tr>
+              <td>Product 2</td>
+              <td>$59.99</td>
+              <td>
+                Sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </td>
+              <td>Medium</td>
+              <td>1.2 kg</td>
+            </tr>
+            <tr>
+              <td>Product 3</td>
+              <td>$69.99</td>
+              <td>
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+              </td>
+              <td>Small</td>
+              <td>0.8 kg</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
 
