changed few link names in index and Prduct file

--- a/Product.html
+++ b/Product.html
@@ -84,7 +84,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        fetch("products.json")
+        fetch("Product.json")
           .then((response) => response.json())
           .then((data) => {
             const productList = document.getElementById("product-list");
