--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="product_page.html" target="_blank">Shop</a></li>
+          <li><a href="Product.html" target="_blank">Shop</a></li>
           <li><a href="cart.html" target="_blank">Cart</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="signup-signin.html" target="_blank">Login</a></li>
@@ -33,9 +33,7 @@
         <h2>Welcome to Our Online Store</h2>
         <p>Discover the best products at unbeatable prices</p>
         <button class="cta-button">
-          <a
-            href="product_page.html"
-            style="text-decoration: none; color: white"
+          <a href="Product.html" style="text-decoration: none; color: white"
             >Shop Now</a
           >
         </button>
